Upgrade to Java 21 and modernize all dependencies
- Java: 1.8 -> 21 (source, target, maven.compiler properties)
- Hadoop: 2.7.2 -> 3.3.6
- HBase: 1.2.0 -> 2.5.8
- ZooKeeper: 3.4.5 -> 3.8.4
- Solr: 5.5.0 -> 8.11.3
- Gora: 0.6 -> 0.9
- Guava: 12.0.1 -> 33.0.0-jre
- Jetty: 6.1.26 (Mortbay) -> 9.4.54.v20240208 (Eclipse)
- ActiveMQ: 5.5.1 -> 5.18.3
- Velocity: 1.7 -> 2.3
- JUnit: 4.10 -> 4.13.2
- Plus ~20 other dependency updates

Source changes:
- Rewrite Record classes from hadoop-record (removed in Hadoop 3) to Writable
- Rewrite metrics v1 -> metrics2 API (v1 removed in Hadoop 3)
- Fix Jsoup Whitelist -> Safelist rename
- Fix FindBugs annotations -> @SuppressWarnings
- Fix WritableUtils -> WritableComparator for byte-level reads
- Fix Solr 8 CloudSolrClient builder pattern and field boost removal
- Fix Gora 0.9 GoraException and clone() requirement
- Fix Velocity 2.x property names and commons-configuration2 import
- Fix HBase 2.x test API changes (HBaseTestingUtility, CoreContainer)
- Fix maven-jar-plugin 3.x duplicate execution error
- Fix assembly descriptors missing required id element